# matchbox-window-manager

./: ChangeLog  configure.ac
src/: Makefile.am  dialog_client.c  main_client.c  structs.h  toolbar_client.c  toolbar_client_alt.c  wm.c
src/composite/: Makefile.am  composite-engine.c  timeline.c  timeline.h
